# bricks

./: .gitmodules  LICENSE  README.md
src/: .gitignore  CMakeLists.txt  bricks.sln  vcpkg.json  version.h
src/bricks/: .gitignore  bricks.cpp  bricks.h  bricks.i  bricks.sln  bricks.vcxproj  bricks.vcxproj.filters  bricks_api.h  log.cpp  logger_api.h  services_api.h  xml_xtree.cpp  xml_xtree.h  xtree.h  xtree_api.h  xtree_impl.cpp
src/bricks-core/: CMakeLists.txt  bricks-core.vcxproj  bricks-core.vcxproj.filters  bricks.h  bricks.vcxproj  bricks_api.h  bricks_impl.cpp  buffer.h  buffer_impl.cpp  buffer_impl.h  common.cpp  common.h  log.cpp  log.h  logger.cpp  logger.h  logger_api.h  logger_impl.cpp  pch.h  plugin.h  queue_impl.h  selector.h  selector_impl.h  service_router.cpp  service_router.h  services_api.h  services_impl.cpp  utils.h  xml_xtree.cpp  xml_xtree.h  xtree.cpp  xtree.h  xtree_api.h  xtree_cloner.cpp  xtree_cloner.h  xtree_impl.cpp  xtree_impl.h  xtree_xml.cpp  xtree_xml.h
src/bricks-core/include/: buffer.h  common.h  plugin.h
src/bricks-jester/: bricks-jester.vcxproj  bricks-jester.vcxproj.filters  jester.h  jester_bidi.cpp  jester_bidi.h  jester_impl.cpp  jester_impl.h  jester_pubsub.cpp  jester_pubsub.h  jester_reqrep.cpp  jester_reqrep.h
src/bricks-kafka/: CMakeLists.txt  bricks-kafka.vcxproj  bricks-kafka.vcxproj.filters  kafka_api.cpp  kafka_api.h  kafka_impl.cpp  kafka_publisher.cpp  kafka_publisher.h  kafka_service.cpp  kafka_service.h  kafka_subscriber.cpp  kafka_subscriber.h  kafka_wrapper.cpp  kafka_wrapper.h  pch.h  rdkafka_common.h  rdkafka_plugin.cpp  rdkafka_plugin.h
src/bricks-kafka/include/: rdkafka_plugin.h
src/bricks-logger/: bricks-logger.vcxproj  bricks-logger.vcxproj.filters  logger.cpp  logger.h
src/bricks-oatpp/: CMakeLists.txt  bricks-oatpp.vcxproj  bricks-oatpp.vcxproj.filters  oatpp_api.h  oatpp_client.cpp  oatpp_client.h  oatpp_impl.cpp  oatpp_plugin.h  oatpp_server.cpp  oatpp_server.h  oatpp_server_controller.cpp  oatpp_server_controller.h  pch.h
src/bricks-oatpp/include/: oatpp_plugin.h
src/bricks-ut/: bidi_tests.cpp  bricks-ut.vcxproj  bricks-ut.vcxproj.filters  generic_tests.h  jester_test.cpp  kafka_test.cpp  oatpp_test.cpp  pch.h  publish_subsribe_tests.cpp  request_response_tests.cpp  xtree_test.cpp  zeromq_test.cpp
src/bricks-zeromq/: CMakeLists.txt  bricks-zeromq.vcxproj  bricks-zeromq.vcxproj.filters  pch.h  vcpkg.json  zeromq_api.h  zeromq_bidi.cpp  zeromq_dealer_bidi.cpp  zeromq_dealer_bidi.h  zeromq_impl.cpp  zeromq_plugin.cpp  zeromq_plugin.h  zeromq_publisher.cpp  zeromq_publisher.h  zeromq_router_client.cpp  zeromq_router_client.h  zeromq_router_server.cpp  zeromq_router_server.h  zeromq_service.cpp  zeromq_service.h  zeromq_subscriber.cpp  zeromq_subscriber.h
src/bricks-zeromq/include/: zeromq_plugin.h
src/bricks/bricks/: bricks.cpp  bricks.h  bricks.i  bricks.vcxproj
src/bricks/runner/: bricks.toml  bricks.xml  runner.cpp  runner.vcxproj  runner.vcxproj.filters
src/bricks_core/: CMakeLists.txt  bricks-core.vcxproj  bricks_core.aps  bricks_core.rc  buffer_impl.cpp  common.cpp  locking_queue.h  meta.h  pch.h  poller_impl.cpp  poller_impl.h  pubsub_client.cpp  pubsub_client.h  pubsub_server.cpp  pubsub_server.h  queue_impl.cpp  queue_impl.h  resource.h  selector_impl.cpp  timer_impl.cpp  timer_impl.h  xtree_cloner.h  xtree_impl.cpp  xtree_impl.h  xtree_xml.cpp  xtree_xml.h
src/bricks_core/include/: bricks.h  common.h  meta.h  plugin.h  queue.h  selector.h  timer.h  utils.h  xtree.h
src/bricks_jester/: CMakeLists.txt  bricks-jester.vcxproj.filters  bricks_jester.rc  jester_bidi.cpp  jester_bidi.h  jester_pubsub.cpp  jester_pubsub.h  jester_reqrep.cpp  jester_reqrep.h  pch.h
src/bricks_jester/include/: jester_plugin.h
src/bricks_kafka/: CMakeLists.txt  bricks_kafka.rc  kafka_publisher.cpp  kafka_publisher.h  kafka_service.cpp  kafka_service.h  kafka_subscriber.cpp  kafka_subscriber.h  packages.config  pch.h  rdkafka_plugin.cpp
src/bricks_kafka/include/: rdkafka_plugin.h
src/bricks_libevent/: CMakeLists.txt  bricks_libevent.rc  libevent_base.cpp  libevent_base.h  libevent_client.cpp  libevent_client.h  libevent_server.cpp  libevent_server.h  pch.h  resource.h
src/bricks_libevent/include/: libevent_plugin.h
src/bricks_logger/: CMakeLists.txt  bricks_logger.rc  logger.cpp  pch.h
src/bricks_logger/include/: logger.h
src/bricks_oatpp/: CMakeLists.txt  bricks_oatpp.rc  oatpp_client.cpp  oatpp_client.h  oatpp_impl.cpp  oatpp_server.cpp  oatpp_server.h  oatpp_server_controller.cpp  oatpp_server_controller.h  pch.h
src/bricks_oatpp/include/: oatpp_plugin.h
src/bricks_rabbitmq/: CMakeLists.txt  bricks_rabbitmq.rc  pch.h  rabbitmq_base.cpp  rabbitmq_base.h  rabbitmq_publisher.cpp  rabbitmq_publisher.h  rabbitmq_subscriber.cpp  rabbitmq_subscriber.h  rabbitmq_utils.cpp  rabbitmq_utils.h  resource.h
src/bricks_rabbitmq/include/: rabbitmq_plugin.h
src/bricks_redispp/: CMakeLists.txt  bricks_redispp.rc  pch.h  redispp_psubscriber.cpp  redispp_psubscriber.h  redispp_publisher.cpp  redispp_publisher.h  redispp_subscriber.cpp  redispp_subscriber.h
src/bricks_redispp/include/: redispp_plugin.h
src/bricks_ut/: CMakeLists.txt  bidi_tests.cpp  bricks-ut.aps  bricks-ut.vcxproj.filters  bricks_ut.aps  bricks_ut.rc  generic_tests.h  jester_test.cpp  kafka_test.cpp  libevent_test.cpp  oatpp_test.cpp  pch.h  publish_subsribe_tests.cpp  rabbitmq_test.cpp  redispp_test.cpp  request_response_tests.cpp  resource.h  test1.xml  xtree_test.cpp  zeromq_test.cpp
src/bricks_zeromq/: CMakeLists.txt  bricks-zeromq.vcxproj  bricks-zeromq.vcxproj.filters  bricks_zeromq.rc  pch.h  zeromq_bidi.cpp  zeromq_bidi.h  zeromq_plugin.cpp  zeromq_publisher.cpp  zeromq_publisher.h  zeromq_service.cpp  zeromq_service.h  zeromq_subscriber.cpp  zeromq_subscriber.h
src/bricks_zeromq/include/: zeromq_plugin.h
src/runner/: bricks.xml  runner.cpp  runner.vcxproj.filters
src/swig/: .gitignore
src/swig/bricks-java/: Makefile  bricks-java.aps  bricks-java.vcxproj  bricks-java.vcxproj.filters  resource.h
(+5 files in other folders)
